--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,9 +3,9 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.6)), url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100vh - 164px);
+    height: 100vh;
     color: #555;
     font-family: 'Lato';
 }
@@ -28,7 +28,7 @@ body {
 }
 
 .shop-now-button {
-    background: black;
+    background: rgb(148, 9, 9);
     color: white;
     min-width: 260px;
 }
