--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,26 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="w-100" 
+<div class="hero-section w-100 position-relative d-flex align-items-center"
      style="background: url('{{ MEDIA_URL }}homepage_background_cropped.jpg') no-repeat center center fixed;
-            background-size: cover;
-            height: 100vh;">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
+            background-size: cover; min-height: 100vh;">
+    <!-- Overlay -->
+    <div class="position-absolute top-0 start-0 w-100 h-100"
+         style="background: rgba(0, 0, 0, 0.85); z-index:1;"></div>
+
+    <div class="container position-relative" style="z-index:2;">
+        <div class="row align-items-center">
             <!-- Left Column: Text + Button -->
-            <div class="col-12 col-md-6 text-white">
+            <div class="col-12 col-md-6 text-white text-center text-md-left mb-4 mb-md-0">
                 <h1 class="display-4 logo-font">
                     Your next designs are waiting
                 </h1>
-                <div class="my-5">
+                <div class="my-4">
                     <h4>
-                        <a href="{% url 'service_list' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Services</a>
+                        <a href="{% url 'service_list' %}" class="shop-now-button btn btn-lg rounded text-uppercase py-3">Services</a>
                     </h4>
                 </div>
             </div>
             <!-- Right Column: Image -->
             <div class="col-12 col-md-6 text-center">
-                <img src="{{ MEDIA_URL }}home_image.jpg" alt="Design preview" class="img-fluid rounded shadow">
+                <img src="{{ MEDIA_URL }}home_image.jpg" 
+                alt="Design preview" 
+                class="img-fluid rounded" 
+                style="max-width: 60%; height: auto;">
             </div>
         </div>
     </div>
