--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,4 @@
 html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -11,6 +10,8 @@ body {
     background-size: cover;
     color: #555;
     font-family: 'Lato', sans-serif;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 /* Bulma icon helper */
@@ -95,7 +96,7 @@ body {
 }
 
 .page-header {
-    padding-top: 120px;
+    padding-top: 30px;
 }
 
 /* Container tweaks for large screens */
@@ -121,11 +122,12 @@ body {
 /* ===== HERO SECTION (Homepage) ===== */
 
 .hero-section {
-    min-height: 100vh;
+    height: calc(100vh - 130px);
     display: flex;
     align-items: center;
     padding-top: 130px;
-    padding-bottom: 40px;
+    padding-bottom: 0;
+    overflow: hidden;
 }
 
 /* Make hero image larger */
