--- a/templates/base.html
+++ b/templates/base.html
@@ -1,87 +1,74 @@
 {% load static %}
-
 <!doctype html>
 <html lang="en">
-
 <head>
-
   {% block meta %}
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   {% endblock %}
 
-  {% block extra_meta %}
-  {% endblock %}
+  {% block extra_meta %}{% endblock %}
 
   {% block corecss %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {# No mini-cart drawer now, so cart.css is optional. Remove if it only styled the drawer. #}
   {% endblock %}
 
   {% block corejs %}
-  <script src="https://kit.fontawesome.com/3348633986.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3348633986.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
   {% endblock %}
 
-  {% block extra_js %}
-  {% endblock %}
+  {% block extra_js %}{% endblock %}
 
   <title>Graphic Design Hub {% block extra_title %}{% endblock %}</title>
 </head>
-
 <body>
-  <header>
+<header>
   <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <div class="container">
-      <!-- Brand -->
       <a class="navbar-brand logo-font" href="{% url 'home' %}">
         <strong>Graphic Design</strong> Hub
       </a>
 
-      <!-- Hamburger Button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
               aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- Collapsible Menu -->
       <div class="collapse navbar-collapse" id="navbarMenu">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="{% url 'service_list' %}">Services</a></li>
+
           {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-              </li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
             {% endif %}
-            {% if request.user.is_authenticated and not request.user.is_superuser %}
-                <li class="nav-item">
-                    <a class="nav-link" href="#">My Profile</a>
-                </li>
+            {% if not request.user.is_superuser %}
+              <li class="nav-item"><a class="nav-link" href="#">My Profile</a></li>
             {% endif %}
             <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
           {% else %}
             <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Register</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
           {% endif %}
-          <li class="nav-item">
-            <a class="nav-link" href="#">
+
+          <li class="nav-item position-relative">
+            {# Cart icon/cost goes straight to bag page (Boutique Ado behavior) #}
+            <a href="{% url 'view_cart' %}" class="nav-link">
               <i class="fas fa-shopping-bag"></i>
-              {% if grand_total %}
-                ${{ grand_total|floatformat:2 }}
-              {% else %}
-                $0.00
-              {% endif %}
+              {% if grand_total %} ${{ grand_total|floatformat:2 }} {% else %} $0.00 {% endif %}
             </a>
           </li>
         </ul>
@@ -90,20 +77,27 @@
   </nav>
 </header>
 
+{% block page_header %}{% endblock %}
+{% block content %}{% endblock %}
 
-  {% if messages %}
-  <div class="message-container"></div>
-  {% endif %}
+{% block postloadjs %}
+  <script src="{% static 'js/toasts.js' %}"></script>
+  {# No mini-cart drawer JS anymore #}
+{% endblock %}
 
-  {% block page_header %}
-  {% endblock %}
+{# Single server-rendered messages block for toasts #}
+{% if messages %}
+  <div class="position-fixed p-3" style="top: 80px; right: 20px; z-index: 2000;">
+    {% for message in messages %}
+      {{ message|safe }}
+    {% endfor %}
+  </div>
+{% endif %}
 
-  {% block content %}
-  {% endblock %}
+{# Optional: AJAX-injected toasts mount point (keep if you use AJAX adds) #}
+<div id="toast-root" aria-live="polite" aria-atomic="true"></div>
 
-  {% block postloadjs %}
-  {% endblock %}
+{# Removed: mini cart drawer include #}
 
 </body>
-
 </html>
