--- a/templates/services/service_list.html
+++ b/templates/services/service_list.html
@@ -1,30 +1,35 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
   <div class="container my-5">
-      <div class="container page-header">
+    <div class="container page-header">
       <h1 class="text-center mb-5 text-white font-weight-bold text-shadow">Our Design Services</h1>
-  </div>
-    <div class="row">
-        {% for service in services %}
-        <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card h-100 shadow-sm">
-                {% if service.image %}
-                <img src="{{ service.image.url }}" class="card-img-top" alt="{{ service.name }}">
-                {% endif %}
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">{{ service.name }}</h5>
-                    <p class="card-text flex-grow-1">{{ service.description|truncatechars:120 }}</p>
-                    <div class="mt-3">
-                        <p class="h5 mb-3">${{ service.price }}</p>
-                        <a href="{% url 'create_checkout_session' service.id %}" 
-                           class="btn btn-primary btn-block">Order Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% empty %}
-        <p class="text-center w-100">No services available yet.</p>
-        {% endfor %}
     </div>
-</div>
+    <div class="row">
+      {% for service in services %}
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100 shadow-sm">
+          {% if service.image %}
+          <img src="{{ service.image.url }}" class="card-img-top" alt="{{ service.name }}">
+          {% endif %}
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">{{ service.name }}</h5>
+            <p class="card-text flex-grow-1">{{ service.description|truncatechars:120 }}</p>
+            <div class="mt-3 d-flex align-items-center justify-content-between">
+              <p class="h5 mb-0">${{ service.price }}</p>
+              <form method="post"
+                    action="{% url 'add_to_cart' service.id %}"
+                    class="d-inline-block add-to-cart-form">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-outline-primary">Add to Cart</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% empty %}
+      <p class="text-center w-100">No services available yet.</p>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock %}
