--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,6 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    {# No mini-cart drawer now, so cart.css is optional. Remove if it only styled the drawer. #}
   {% endblock %}
 
   {% block corejs %}
@@ -28,6 +27,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
 
   {% block extra_js %}{% endblock %}
@@ -65,7 +65,6 @@
           {% endif %}
 
           <li class="nav-item position-relative">
-            {# Cart icon/cost goes straight to bag page (Boutique Ado behavior) #}
             <a href="{% url 'view_cart' %}" class="nav-link">
               <i class="fas fa-shopping-bag"></i>
               {% if grand_total %} ${{ grand_total|floatformat:2 }} {% else %} $0.00 {% endif %}
@@ -96,8 +95,6 @@
 
 {# Optional: AJAX-injected toasts mount point (keep if you use AJAX adds) #}
 <div id="toast-root" aria-live="polite" aria-atomic="true"></div>
-
-{# Removed: mini cart drawer include #}
 
 </body>
 </html>
