--- a/templates/orders/checkout.html
+++ b/templates/orders/checkout.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
+
 {% block content %}
 <div class="container" style="padding-top: 6rem; padding-bottom: 2rem;">
-  <h1 class="mb-4 text-center">Checkout</h1>
+  <h1 class="mb-4 text-center text-white">Checkout</h1>
 
   <div class="row justify-content-center">
     <div class="col-md-7 col-lg-6">
@@ -33,14 +35,12 @@
             {% csrf_token %}
             {{ form|crispy }}
 
-            <!-- Stripe Card Element host -->
             <div class="form-group">
               <label for="card-element">Card</label>
               <div id="card-element" class="form-control"></div>
               <small id="card-errors" class="form-text text-danger" role="alert"></small>
             </div>
 
-            <!-- Hidden field populated by JS after payment succeeds -->
             <input type="hidden" name="payment_intent_id" id="payment_intent_id">
 
             <div class="d-flex">
@@ -51,7 +51,6 @@
         </div>
       </div>
 
-      <!-- Expose keys to JS -->
       {{ stripe_public_key|json_script:"id_stripe_public_key" }}
       {{ client_secret|json_script:"id_client_secret" }}
     </div>
