--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -30,7 +30,7 @@
 
     {% include "socialaccount/snippets/login_extra.html" %}
   {% else %}
-    <p class="text-center mb-4">
+    <p class="text-center text-white mb-4">
       {% blocktrans %}
         If you have not created an account yet, then please  
         <a href="{{ signup_url }}">sign up</a> first.
