--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,4 +1,3 @@
-<!-- templates/account/signup.html -->
 {% extends "base.html" %}
 {% load i18n %}
 {% load crispy_forms_tags %}
@@ -9,7 +8,7 @@
 <div class="container" style="padding-top:6rem; max-width:520px;">
   <h1 class="mb-3 text-white text-center">{% trans "Sign Up" %}</h1>
 
-  <p class="text-center mb-4">
+  <p class="text-center text-white mb-4">
     {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
   </p>
 
