--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,24 +1,49 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="container" style="padding-top:6rem; padding-bottom:2rem;">
+  <h1 class="mb-4 text-center text-white">{% trans "Password Reset" %}</h1>
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+  <div class="row justify-content-center">
+    <div class="col-md-7 col-lg-6">
+      {% if user.is_authenticated %}
+        <div class="alert alert-info mb-3">
+          {% include "account/snippets/already_logged_in.html" %}
+        </div>
+      {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+      <div class="card">
+        <div class="card-header"><strong>{% trans "Reset your password" %}</strong></div>
+        <div class="card-body">
+          <p class="mb-3">
+            {% trans "Forgot your password? Enter your e‑mail address below and we’ll send you a link to reset it." %}
+          </p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+          <form method="post" action="{% url 'account_reset_password' %}" novalidate>
+            {% csrf_token %}
+            {{ form|crispy }}
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+            <div class="d-flex justify-content-between mt-3">
+              <a class="btn btn-outline-secondary" href="{% url 'account_login' %}">
+                {% trans "Back to Sign In" %}
+              </a>
+              <button type="submit" class="btn btn-primary">
+                {% trans "Send Reset Link" %}
+              </button>
+            </div>
+          </form>
+
+          <p class="small text-muted mt-3 mb-0">
+            {% trans "If you don’t receive an e‑mail in a few minutes, please check your spam folder or contact us." %}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
