--- a/templates/services/service_list.html
+++ b/templates/services/service_list.html
@@ -10,7 +10,9 @@
       <div class="col-12 col-md-6 col-lg-4 mb-4">
         <div class="card h-100 shadow-sm">
           {% if service.image %}
-          <img src="{{ service.image.url }}" class="card-img-top" alt="{{ service.name }}">
+            <img src="{{ service.image.url }}" alt="{{ service.name }}" class="img-fluid rounded">
+          {% else %}
+            <img src="{% static 'img/placeholder_service.jpg' %}" alt="{{ service.name }}" class="img-fluid rounded">
           {% endif %}
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{ service.name }}</h5>
