styled email confirmation page

--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,16 +1,29 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+<div class="container" style="padding-top:6rem; max-width:520px;">
+  <h1 class="mb-3 text-white text-center">{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+  <div class="card">
+    <div class="card-body">
+      <form method="post" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+        {{ form|crispy }}
+
+        <div class="d-flex justify-content-between mt-3">
+          <a href="{% url 'account_reset_password' %}" class="btn btn-outline-secondary">
+            {% trans "Forgot Password?" %}
+          </a>
+          <button type="submit" name="action" class="btn btn-primary">
+            {% trans "Change Password" %} &raquo;
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
