--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,9 +1,18 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="container" style="padding-top:6rem; max-width:520px;">
+  <h1 class="mb-3 text-white text-center">{% trans "Change Password" %}</h1>
+
+  <div class="card">
+    <div class="card-body text-center">
+      <p class="mb-0">
+        {% trans 'Your password is now changed.' %}
+      </p>
+    </div>
+  </div>
+</div>
 {% endblock %}
