--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,19 +1,42 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
+<div class="container" style="padding-top:6rem; max-width:520px;">
+  <h1 class="mb-3 text-white text-center">
     {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+      {% trans "Bad Token" %}
     {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
+      {% trans "Change Password" %}
     {% endif %}
+  </h1>
+
+  <div class="card">
+    <div class="card-body">
+      {% if token_fail %}
+        {% url 'account_reset_password' as passwd_reset_url %}
+        <p class="text-center mb-0">
+          {% blocktrans %}
+            The password reset link was invalid, possibly because it has already been used.  
+            Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.
+          {% endblocktrans %}
+        </p>
+      {% else %}
+        <form method="post" action="{{ action_url }}">
+          {% csrf_token %}
+          {{ form|crispy }}
+
+          <div class="d-flex justify-content-end mt-3">
+            <button type="submit" name="action" class="btn btn-primary">
+              {% trans "Change Password" %} &raquo;
+            </button>
+          </div>
+        </form>
+      {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock %}
