added external link

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,6 +172,7 @@ main {
 .bg-cinematic {
   background-color: #333 !important;
   color: #fff !important;
+}
 
 footer.footer {
   background-color: #333;
